# nanoGPT.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cdp.yml
core/: Cargo.toml
core/src/: data.rs  lib.rs  logger.rs  model.rs  tokenizer.rs  training.rs
core/src/data/: batcher.rs  bigram_inputs.rs  dataset.rs  mod.rs  range_sampler.rs  tokenizer.rs
exe/: Cargo.toml
exe/src/: args.rs  logger.rs  main.rs
nbs/: karpathy-bigram.ipynb  karpathy-bigram.py
