[workspace]
resolver = "2"
members = ["core", "exe"]

[workspace.dependencies]
burn = { version = "0.11.1" }
burn-ndarray = { version = "0.11.1" }
log = { default-features = false, version = "0.4.20" }
serde = { version = "1.0.192", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed
