[package]
name = "nano_gpt_lib"
version = "0.1.0"
edition = "2021"
authors = ["unrenormalizable <unrenormalizable@gmail.com>"]
description = "nanoGPT core"
license = "CC BY-NC-SA 4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]

[dev-dependencies]
proptest = "0.4.1"
test-case = "3.3.1"
insta = { version = "1.34.0", features = ["yaml"] }
