[package]
name = "nano_gpt"
version = "0.1.0"
edition = "2021"
authors = ["unrenormalizable <unrenormalizable@gmail.com>"]
description = "nanoGPT test executable"
license = "CC BY-NC-SA 4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nano_gpt_lib = { path = '../core' }
burn = { workspace = true, features = ["wgpu", "train", "ndarray"] }
burn-wgpu = { workspace = true }
burn-ndarray = { workspace = true }
colored = "2"
chrono = "0.4"
clap = "2.33.3"
regex = "1.4.4"

[dev-dependencies]
proptest = "0.4.1"
test-case = "3.3.1"
insta = { version = "1.34.0", features = ["yaml"] }
